# ByteTransformer

bytetransformer/src/: gemm_bias_act.cu  ln.cu
torch/: CMakeLists.txt  README.md  gemm_ops.cc  gemm_ops.cpp  test_gelu.py  test_gemm.py  test_layernorm.py
torch/include/: bt.h
